--- a/FluidConsoleApp/FluidConsoleApp.csproj
+++ b/FluidConsoleApp/FluidConsoleApp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fluid.Core" Version="2.0.13" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
