Add companies liquid templates

--- a/LiquidHelper/LiquidHelper.csproj
+++ b/LiquidHelper/LiquidHelper.csproj
@@ -224,6 +224,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompanyLookup.cs" />
     <Compile Include="FluidHelper.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
